2008-08-25  Christophe Lyon  <christophe.lyon@st.com>

	* elf32-arm.c (arm_thumb_arm_v4t_short_branch_stub): Define.
	(elf32_arm_stub_type): Add arm_thumb_arm_v4t_stub_short_branch.
	(arm_type_of_stub): Handle armv4t short branches. Update
	prototype.
	(arm_stub_is_thumb): Handle arm_thumb_arm_v4t_stub_short_branch.
	(arm_build_one_stub): Likewise.
	(arm_size_one_stub): Likewise.
	(elf32_arm_size_stubs): Use new arm_type_of_stub prototype.
	(arm_map_one_stub): Handle arm_thumb_arm_v4t_stub_short_branch.

2008-08-24  Andreas Schwab  <schwab@suse.de>

	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Do proper
	extension when calculating difference of offsets.

2008-08-24  Alan Modra  <amodra@bigpond.net.au>

	* configure.in: Update a number of obsolete autoconf macros.
	* aclocal.m4: Regenerate.

2008-08-23  Andreas Schwab  <schwab@suse.de>

	* opncls.c (find_separate_debug_file): Use the canonical
	absolute name of the bfd object for finding the debug file in
	the global debugfile directory.

2008-08-22  Jakub Jelinek  <jakub@redhat.com>

	Fix PR ld/3290 regression for cross-files DW_FORM_ref_addr relocations.
	* elflink.c (elf_link_add_object_symbols): Make debug symbols local
	now only for non-RELOCATABLE targets.

2008-08-20  Bob Wilson  <bob.wilson@acm.org>

	* elf-bfd.h (elf_object_id): Add XTENSA_ELF_TDATA.
	* elf32-xtensa.c (elf_howto_table): Add TLS relocations.
	(elf_xtensa_reloc_type_lookup): Likewise.
	(TCB_SIZE): Define.
	(elf_xtensa_link_hash_entry): New.
	(GOT_UNKNOWN, GOT_NORMAL, GOT_TLS_GD, GOT_TLS_IE, GOT_TLS_ANY): Define.
	(elf_xtensa_hash_entry): Define.
	(elf_xtensa_obj_tdata): New.
	(elf_xtensa_tdata): Define.
	(elf_xtensa_local_got_tls_type): Define.
	(elf_xtensa_local_tlsfunc_refcounts): Define.
	(is_xtensa_elf): Define.
	(elf_xtensa_mkobject): New.
	(elf_xtensa_link_hash_table): Add tlsbase field.
	(elf_xtensa_link_hash_newfunc): New.
	(elf_xtensa_link_hash_table_create): Use elf_xtensa_link_hash_newfunc.